# src/presentation/routes/user.route.js
@@ -1,6 +1,11 @@
 import express from "express";
 import { authMiddleware } from "../../middleware/auth.middleware.js";
-import { createUser, deleteUser, login, updateUser } from "../controllers/user.controller.js";
+import {
+  createUser,
+  deleteUser,
+  login,
+  updateUser,
+} from "../controllers/user.controller.js";
 import { verifyRole } from "../../middleware/verify.role.middleware.js";
 import { UserRoles } from "../../shared/application.constants.js";
 import { validateBody } from "../../middleware/validate.payload.middleware.js";
@@ -13,7 +18,11 @@ userRouter.post("/login", login);
 userRouter.post(
   "/register",
   authMiddleware,
-  verifyRole([UserRoles["Business Admin"], UserRoles["Super Admin"]]),
+  verifyRole([
+    UserRoles["Business Admin"],
+    UserRoles["Super Admin"],
+    UserRoles["Manager"],
+  ]),
   validateBody(userSchemas.RegisterUserSchema),
   createUser,
 );
@@ -33,6 +42,5 @@ userRouter.patch(
   validateBody(userSchemas.UpdateUserSchema),
   updateUser,
 );
-
 
 export default userRouter;
